使用 Colaboratory 建立

--- a/20230211.ipynb
+++ b/20230211.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcfkjTkite0Yz1Ak1DONI8",
+      "authorship_tag": "ABX9TyN1r43bovw1Mm3elylY/521",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -384,7 +384,7 @@
       "cell_type": "code",
       "source": [
         "v = 'It's my dog'\n",
-        "# 語法錯誤，因為It's那邊就會出錯"
+        "# 語法錯誤，因為It's那邊就會出錯，電腦誤把'It' 編成獨立的字"
       ],
       "metadata": {
         "colab": {
@@ -417,6 +417,394 @@
       },
       "execution_count": 30,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 字串的加法(+)跟乘法(*1)"
+      ],
+      "metadata": {
+        "id": "ZzzYrRZLfY2c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"abc\"+\"3\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "HKh0r9pqfX29",
+        "outputId": "d15a9a55-23b0-4286-95cd-8964866eaafa"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'abc3'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"abc\"*3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "J2fEMQRhfnBL",
+        "outputId": "b8432164-4b88-415a-e92c-c15fda1b5434"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'abcabcabc'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 練習: (使用字串畫出底下的金字塔)\n",
+        "```\n",
+        "     *\n",
+        "    ***\n",
+        "   *****\n",
+        "  *******\n",
+        " *********\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "39BqbJXXfvTg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MvTu15xGg69m",
+        "outputId": "1ec8856c-8b1a-48ee-ed83-c4cbab9fd896"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(3):\n",
+        "  print(\"程式區塊開始\")\n",
+        "  print(i)\n",
+        "  print(\"程式區塊結束\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LhYHBWMVhAiA",
+        "outputId": "a63c5548-4462-46d2-89b7-ed727bdfe9a9"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "程式區塊開始\n",
+            "0\n",
+            "程式區塊結束\n",
+            "程式區塊開始\n",
+            "1\n",
+            "程式區塊結束\n",
+            "程式區塊開始\n",
+            "2\n",
+            "程式區塊結束\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(3):\n",
+        "  print(\"程式區塊開始\")\n",
+        "  print(i)\n",
+        "print(\"程式區塊結束\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_OmYQ9zCgO2V",
+        "outputId": "75d9077f-55cb-4bbe-bba4-4e7d2fea2962"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "程式區塊開始\n",
+            "0\n",
+            "程式區塊開始\n",
+            "1\n",
+            "程式區塊開始\n",
+            "2\n",
+            "程式區塊結束\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print((2*i+1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o0_dgIWKiF8x",
+        "outputId": "a24ade65-5494-4bc0-a18c-97e4af206dd0"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print((2*i+1)*\"*\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ePyyOf_qhvkM",
+        "outputId": "d34681d6-0bd4-4b3f-8766-bc67314e9ade"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*\n",
+            "***\n",
+            "*****\n",
+            "*******\n",
+            "*********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "  print((-i+5)*' '+(2*i+1)*'*')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X8UxakDuiffh",
+        "outputId": "769ae330-6217-4a0c-c3d5-0df95106e400"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     *\n",
+            "    ***\n",
+            "   *****\n",
+            "  *******\n",
+            " *********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# input() 及print()\n",
+        "input():用來讀取輸入\n",
+        "print():用來打印輸出"
+      ],
+      "metadata": {
+        "id": "OkUPPNNFlI2b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = input(\"請輸入一個數字：\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G9j0_6gslIXa",
+        "outputId": "f78bc87f-1812-42c9-f484-77480a66fffc"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入一個數字：100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cz7lxLWGlHsM",
+        "outputId": "5fae0ff9-76cf-4768-de3b-fb85463c4588"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aGCPPFw1mQ4B",
+        "outputId": "04fd7f8c-558d-4913-e483-6215b2bbb991"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 1\n",
+        "y = 2\n",
+        "z = 3\n",
+        "print(x, y, z)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2v8o1QDZmTML",
+        "outputId": "62ddfd65-72e3-40c4-aa2b-6d61454ab80f"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 基礎容器型別\n",
+        "\n",
+        "* list (串列)\n",
+        "* tuple (元組)\n",
+        "* dict (字典)\n",
+        "* set (集合)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "MpqttxwFoELh"
+      }
     }
   ]
 }
