--- a/20230211.ipynb
+++ b/20230211.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtvgvBiQl/nuPaywm+1IQB",
+      "authorship_tag": "ABX9TyOE54ODgV4mJUrQHKmc1Wdj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2080,71 +2080,71 @@
       "cell_type": "code",
       "source": [
         "for i in data:\n",
-        "  print(i['code'],\":\",i['name'])"
+        "  print(i['code'],\":\",i['name'],i['weights'])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zgvBgkahfaoW",
-        "outputId": "b43ae793-50b4-40f9-b689-b9d611acf1db"
+        "outputId": "5a39d4dc-5df0-40e7-e7ae-2d6fd5ff4785"
       },
-      "execution_count": 207,
+      "execution_count": 209,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2330 : 台積電\n",
-            "2317 : 鴻海\n",
-            "2454 : 聯發科\n",
-            "2308 : 台達電\n",
-            "2303 : 聯電\n",
-            "2881 : 富邦金\n",
-            "2412 : 中華電\n",
-            "1303 : 南亞\n",
-            "2891 : 中信金\n",
-            "2002 : 中鋼\n",
-            "2882 : 國泰金\n",
-            "2886 : 兆豐金\n",
-            "3711 : 日月光投控\n",
-            "2884 : 玉山金\n",
-            "1301 : 台塑\n",
-            "5871 : 中租-KY\n",
-            "1216 : 統一\n",
-            "2892 : 第一金\n",
-            "2885 : 元大金\n",
-            "5880 : 合庫金\n",
-            "1326 : 台化\n",
-            "1101 : 台泥\n",
-            "3008 : 大立光\n",
-            "2880 : 華南金\n",
-            "3034 : 聯詠\n",
-            "2382 : 廣達\n",
-            "6415 : 矽力*-KY\n",
-            "2883 : 開發金\n",
-            "2327 : 國巨\n",
-            "2207 : 和泰車\n",
-            "2357 : 華碩\n",
-            "2887 : 台新金\n",
-            "2890 : 永豐金\n",
-            "1590 : 亞德客-KY\n",
-            "2379 : 瑞昱\n",
-            "3045 : 台灣大\n",
-            "5876 : 上海商銀\n",
-            "3037 : 欣興\n",
-            "2912 : 統一超\n",
-            "2395 : 研華\n",
-            "2603 : 長榮\n",
-            "1402 : 遠東新\n",
-            "2801 : 彰銀\n",
-            "6505 : 台塑化\n",
-            "4904 : 遠傳\n",
-            "2615 : 萬海\n",
-            "2609 : 陽明\n",
-            "9910 : 豐泰\n",
-            "8046 : 南電\n",
-            "2408 : 南亞科\n"
+            "2330 : 台積電 48.73\n",
+            "2317 : 鴻海 4.51\n",
+            "2454 : 聯發科 4.1\n",
+            "2308 : 台達電 2.36\n",
+            "2303 : 聯電 2.21\n",
+            "2881 : 富邦金 1.62\n",
+            "2412 : 中華電 1.6\n",
+            "1303 : 南亞 1.56\n",
+            "2891 : 中信金 1.52\n",
+            "2002 : 中鋼 1.43\n",
+            "2882 : 國泰金 1.42\n",
+            "2886 : 兆豐金 1.35\n",
+            "3711 : 日月光投控 1.34\n",
+            "2884 : 玉山金 1.25\n",
+            "1301 : 台塑 1.24\n",
+            "5871 : 中租-KY 1.2\n",
+            "1216 : 統一 1.19\n",
+            "2892 : 第一金 1.02\n",
+            "2885 : 元大金 1.02\n",
+            "5880 : 合庫金 1.0\n",
+            "1326 : 台化 0.9\n",
+            "1101 : 台泥 0.87\n",
+            "3008 : 大立光 0.86\n",
+            "2880 : 華南金 0.86\n",
+            "3034 : 聯詠 0.82\n",
+            "2382 : 廣達 0.77\n",
+            "6415 : 矽力*-KY 0.76\n",
+            "2883 : 開發金 0.76\n",
+            "2327 : 國巨 0.75\n",
+            "2207 : 和泰車 0.74\n",
+            "2357 : 華碩 0.71\n",
+            "2887 : 台新金 0.68\n",
+            "2890 : 永豐金 0.68\n",
+            "1590 : 亞德客-KY 0.63\n",
+            "2379 : 瑞昱 0.63\n",
+            "3045 : 台灣大 0.62\n",
+            "5876 : 上海商銀 0.62\n",
+            "3037 : 欣興 0.6\n",
+            "2912 : 統一超 0.56\n",
+            "2395 : 研華 0.55\n",
+            "2603 : 長榮 0.55\n",
+            "1402 : 遠東新 0.47\n",
+            "2801 : 彰銀 0.43\n",
+            "6505 : 台塑化 0.42\n",
+            "4904 : 遠傳 0.4\n",
+            "2615 : 萬海 0.39\n",
+            "2609 : 陽明 0.39\n",
+            "9910 : 豐泰 0.31\n",
+            "8046 : 南電 0.19\n",
+            "2408 : 南亞科 0.18\n"
           ]
         }
       ]
